Updated colors to fix contrast issues.

--- a/styles/base.css
+++ b/styles/base.css
@@ -80,7 +80,7 @@ main {
 }
 
 h3 {
-    background-color: steelblue;
+    background-color: blue;
     color: white;
     padding: 10px;
     border: 2px lightgray;
